@@ -79,6 +79,7 @@ type locatable =
   | LocateTerm of reference or_by_notation
   | LocateLibrary of reference
   | LocateModule of reference
+  | LocateTactic of reference
   | LocateFile of string
 
 type goable =
